k8s/member/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      containers:
      - name: member
        image: duynguyen21vnlp/ms-member:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: regcred
        # ports:
        # - containerPort: 80
