k8s/member/service.yml
apiVersion: v1
kind: Service
metadata:
  name: member
spec:
  selector:
    app: member
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Local
