k8s/member/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member-service
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: member
            port:
              number: 3000
